# containerize-voila-app

./: Dockerfile  README.md  logs_analytics.ipynb  pyproject.toml
