[tool.poetry]
name = "logs-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
ipywidgets = "^8.1.1"
bqplot = "^0.12.42"
seaborn = "^0.13.0"
voila = "^0.5.4"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
